# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-2.0.33 (30 Aug 2002): Gentoo Linux 1.4 freeze version  

  30 Aug 2002; Daniel Robbins <drobbins@gentoo.org> : some additional clean-ups
  for the make.conf(.ppc) files.
  
  30 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: emerge search would
  die when aux_get() raised a KeyError; we now catch and handle this exception.
  This closes bug #7280.
  
  29 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed typo in
  move_ent() code that messed up moving packages into previously non-existant
  category directories in /var/db/pkg.
  
  30 Aug 2002; Mark Guertin <gerk@gentoo.org> cnf/make.conf.ppc : Updated
  cnf/make.conf.ppc with new CFLAGS for 1.4 release

*portage-2.0.32 (29 Aug 2002)  
  
  29 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: favorites weren't
  working since 2.0.30; they're working again now. This closes bug #7225.

  29 Aug 2002; Phil Bordelon <sunflare@gentoo.org> emerge.1: Added a small
  blurb regarding what to do when emerge --update [world|system] fails because
  of new features such as || and ?.  Hopefully this will assuage the fairly
  common questions regarding this.

*portage-2.0.31 (29 Aug 2002)

  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed a config
  file protection logic bug detected and identified by Azarah. It basically
  broke most config file updates and has been broken for around six months.
  Very surprised no one had encountered this issue before.
  
  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: improved error
  messages when an unsatisfiable dependency is encountered. Now lets you know
  if there are masked packages that would satisfy the dep.
  
  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: emerging .tbz2
  packages and .ebuilds by name now works; this was broken in 2.0.30.

*portage-2.0.30 (28 Aug 2002)
